--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   provider: ^4.3.2+2
-  # firebase_core: ^0.5.2
-  # firebase_auth: ^0.18.3
+  firebase_core: ^0.5.2
+  firebase_auth: ^0.18.3
+  cloud_firestore: ^0.14.3
+  modal_progress_hud: ^0.1.3
 
 dev_dependencies:
   flutter_test:
